@@ -14,6 +14,7 @@ Changes in 1.4.4-stable:
  o Expose evhttp_accept_socket() API.
  o Merge windows gettimeofday() replacement into a new evutil_gettimeofday() function.
  o Fix autoconf script behavior on IRIX.
+ o Make sure winsock2.h include always comes before windows.h include.
 
 
 Changes in 1.4.3-stable:
